# LetiPrint

./: .gitmodules  README.md  docker-compose.yml
.github/workflows/: build_and_test_backend_service.yml  build_and_test_leti_print_bot.yml  build_docker_image_of_backend_service.yml  build_docker_image_of_leti_print_bot.yml  deploy_docker_image_of_backend_service.yml  deploy_docker_image_of_leti_print_bot.yml
BackendService/: Dockerfile  pom.xml
BackendService/src/main/java/com/example/backendservice/: BackendLogger.java  BackendServiceApplication.java
BackendService/src/main/java/com/example/backendservice/controller/: BackendController.java
BackendService/src/main/java/com/example/backendservice/models/: MetaData.java
BackendService/src/main/java/com/example/backendservice/repositories/: MetaDataRepository.java
BackendService/src/main/java/com/example/backendservice/serelization/: JsonSerelizator.java
BackendService/src/main/resources/: application.properties  log4j2.xml
EmbeddedService/: CMakeLists.txt  Dockerfile  docker-compose.yml
EmbeddedService/src/: main.cpp
Examples/PrintOrderTask/: CMakeLists.txt  main.cpp
IoTService/: CMakeLists.txt  Dockerfile  docker-compose.yml
IoTService/cups server/: docker-compose.yml
IoTService/cups_server/: Dockerfile  cupsd.conf  docker-compose.yml
IoTService/include/lcdConnector/: lcdConnector.cpp
IoTService/src/: main.cpp
IoTService/src/FileDownloader/: FileDownloader.cpp  FileDownloader.h  FileDownloaderExceptions.h
IoTService/src/GPIOController/: GPIOController.cpp  GPIOController.h
IoTService/src/IoTService/: IoTService.cpp  IoTService.h
IoTService/src/LcdConnector/: LcdConnector.cpp  LcdConnector.h
IoTService/src/PrinterController/: PrinterController.cpp  PrinterController.h
LetiPrintBot/: Dockerfile  docker-compose.yml  pom.xml
LetiPrintBot/src/main/java/com/example/letiprintbot/: LetiPrintBotApplication.java  LetiPrintBotLogger.java
LetiPrintBot/src/main/resources/: application.properties
(+6 files in other folders)
